# got-portable

./: .cirrus.yml  .gitignore  CHANGELOG  CHANGES  LICENCE  Makefile  Makefile.am  README.portable  TODO  configure.ac  got-dist.txt  got-version.mk
.github/: README.md
compat/: imsg-buffer.c  imsg.c
cvg/: Makefile  Makefile.am  cvg.c
gitwrapper/: Makefile.am
got/: Makefile  Makefile.am  git-repository.5  got.1  got.c
gotadmin/: Makefile  Makefile.am  gotadmin.c
gotctl/: Makefile.am  gotctl.c
gotd/: Makefile  Makefile.am  gotd.8  gotd.c  listen.c  parse.y  repo_write.c
gotsh/: Makefile  Makefile.am  gotsh.1  gotsh.c
gotsys/: Makefile  gotsys.c  gotsys.conf.5  gotsys.h  parse.y
gotsysctl/: gotsysctl.c
gotsysd/: Makefile  gotsysd.8  gotsysd.c  gotsysd.conf.5  gotsysd.h  helpers.c  parse.y  sysconf.c  sysconf.h
gotwebctl/: Makefile  Makefile.am  gotwebctl  gotwebctl.8  gotwebctl.c
gotwebd/: Makefile  Makefile.am  auth.c  config.c  fcgi.c  got_operations.c  gotweb.c  gotwebd.8  gotwebd.c  gotwebd.conf.5  gotwebd.h  login.c  media.c  pages.tmpl  parse.y  sockets.c
include/: got_compat2.h  got_error.h  got_fetch.h  got_object.h  got_reference.h  got_repository.h
lib/: delta_cache.c  error.c  fetch.c  fileindex.c  gitproto.c  got_lib_fileindex.h  got_lib_gitproto.h  got_lib_object.h  got_lib_object_idset.h  got_lib_pack_create.h  got_lib_privsep.h  got_lib_repository.h  gotsys_conf.c  gotsys_imsg.c  media.c  media.h  object_idset.c  object_open_io.c  object_open_privsep.c  pack.c  pack_create.c  pack_create_privsep.c  path.c  portable-socket.c  send.c  (+10 more)
(+83 files in other folders)
